# edge-app-core

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/ai/edgez/controller/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hello_wasm.wasm
app/src/main/assets/models/: 5001.xml
app/src/main/cpp/: CMakeLists.txt  wasmtime_bridge.c
app/src/main/java/ai/edgez/controller/: MainActivity.java  WasmtimeRunner.java
app/src/main/java/ai/edgez/controller/ui/reflow/: ReflowFragment.java  ReflowViewModel.java
app/src/main/java/ai/edgez/controller/ui/settings/: SettingsFragment.java  SettingsViewModel.java
app/src/main/java/ai/edgez/controller/ui/slideshow/: SlideshowFragment.java  SlideshowViewModel.java
app/src/main/java/ai/edgez/controller/ui/transform/: DeviceDetailFragment.java  ResourceListFragment.java  TransformFragment.java  TransformViewModel.java
app/src/main/res/layout/: app_bar_main.xml  dialog_resource_action.xml  fragment_device_detail.xml  fragment_resource_list.xml  item_object_link.xml  item_resource.xml  item_transform.xml
app/src/main/res/layout-w1240dp/: app_bar_main.xml
app/src/main/res/layout-w600dp/: app_bar_main.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ai/edgez/controller/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
scripts/: fetch_wasmtime_prebuilt.sh
